fix table text overflow

--- a/frontend/stylesheets/table.scss
+++ b/frontend/stylesheets/table.scss
@@ -4,3 +4,8 @@
 .hoverable > tbody > tr:hover {
   background-color: rgba(179,229,252,0.15);
 }
+
+tbody > tr > td {
+  text-overflow: inherit !important;
+  white-space: normal !important; 
+}
